--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+@keyframes fade-in-bottom {
+
+    0% {
+
+      transform: translateY(50px);
+      opacity: 0;
+
+    }
+
+    100% {
+
+      transform: translateY(0);
+      opacity: 1;
+
+    }
+    
+}
+
+@keyframes fade-in {
+
+    0% {
+
+      opacity: 0;
+
+    }
+
+    100% {
+
+      opacity: 1;
+
+    }
+    
+}
+
 body {
 
     margin: 0px;
@@ -16,6 +50,19 @@ body {
 
 }
 
+.loginIllustrate {
+
+    width: 60%;
+    height: 30%;
+
+    top: 9%;
+    left: 20%;
+
+    position: absolute;
+    animation: fade-in 5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+
+}
+
 .loginModal {
 
     width: 100%;
@@ -29,9 +76,11 @@ body {
     border-top-right-radius: 50px;
     background-color: #EEEEEE;
 
+    animation: fade-in-bottom 2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    
 }
 
-.loginTitle {
+.loginModalTitle {
 
     left: 8%;
     top: 15%;
@@ -46,9 +95,9 @@ body {
 
 }
 
-.loginTitleAlert {
+.loginModalTitleBold {
 
-    left: 8%;
+    left: 7.5%;
     top: 22%;
 
     position: absolute;
@@ -58,5 +107,90 @@ body {
     font-family: Inter;
     font-size: 38px;
     font-weight: 700;
+
+}
+
+.loginModalDescription {
+
+    width: 62%;
+
+    left: 8%;
+    top: 35%;
+
+    position: absolute;
+
+    color: #31363F;
+    opacity: 70%;
+
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 400;
+
+}
+
+.signupButton {
+
+    width: 42%;
+    height: 15%;
+
+    top: 70%;
+    left: 10%;
+
+    position: absolute;
+
+    border-radius: 30px;;
+
+    background-color: #222831 
+
+}
+
+.signinButton {
+
+    width: 42%;
+    height: 14.3%;
+
+    top: 70%;
+    left: 45%;
+
+    position: absolute;
+
+    border-radius: 30px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+
+    border-style: solid;
+    border-color: #222831 
+
+}
+
+.signupTitle {
+
+    left: 20%;
+    top: 30%;
+
+    position: absolute;
+
+    color: #EEEEEE;
+
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 700;
+
+
+}
+
+.signinTitle {
+
+    left: 36%;
+    top: 30%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 700;
+
 
 }
