--- a/css/login.css
+++ b/css/login.css
@@ -99,6 +99,23 @@ body {
 
 }
 
+.loginSwipeBar {
+
+    width: 40%;
+    height: 1%;
+
+    top: 5%;
+    left: 30%;
+
+    position: absolute;
+
+    background-color: #222831;
+    opacity: 50%;
+
+    border-radius: 5px;
+
+}
+
 .loginModal {
 
     width: 100%;
@@ -164,37 +181,63 @@ body {
 
 }
 
+.signTitle {
+
+    width: 62%;
+
+    left: 29%;
+    top: 62%;
+
+    position: absolute;
+
+    color: #31363F;
+    opacity: 70%;
+
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 700;
+
+}
+
 .signupButton {
 
-    width: 42%;
+    width: 39%;
     height: 15%;
 
     top: 70%;
-    left: 10%;
+    left: 9%;
 
     position: absolute;
 
     border-radius: 30px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 
     border-style: solid;
-    border-color: #222831; 
+    border-color: #222831;
+    
+    transition: background-color 0.2s;
 
 }
 
 .signinButton {
 
-    width: 42%;
-    height: 14.3%;
+    width: 39%;
+    height: 15%;
 
     top: 70%;
-    left: 45%;
+    left: 48%;
 
     position: absolute;
 
     border-radius: 30px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 
     border-style: solid;
-    border-color: #222831 
+    border-color: #222831; 
+
+    transition: background-color 0.2s;
 
 }
 
@@ -205,8 +248,6 @@ body {
 
     position: absolute;
 
-    color: #EEEEEE;
-
     font-family: Inter;
     font-size: 18px;
     font-weight: 700;
@@ -214,14 +255,12 @@ body {
 
 }
 
-.signinTitle {
+.signinButtonTitle {
 
-    left: 36%;
+    left: 30%;
     top: 30%;
 
     position: absolute;
-
-    color: #222831;
 
     font-family: Inter;
     font-size: 18px;
