--- a/css/login.css
+++ b/css/login.css
@@ -70,6 +70,26 @@ input[type="text"] {
     
 }
 
+input[type="password"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
+    
+    -webkit-appearance: none;
+    margin: 0;
+    border: none; 
+    border-width: 0; 
+    box-shadow: none;
+    outline: none;
+    
+}
+input[type="password"] {
+    
+    -moz-appearance: textfield;
+    border: none; 
+    border-width: 0px; 
+    box-shadow: none;
+    outline: none;
+    
+}
+
 body {
 
     margin: 0px;
@@ -78,9 +98,6 @@ body {
 }
 
 .login {
-
-    width: 100%;
-    height: 100%;
 
     display: none; 
 
@@ -201,7 +218,7 @@ body {
 
 .signupButton {
 
-    width: 39%;
+    width: 42%;
     height: 15%;
 
     top: 70%;
@@ -222,11 +239,11 @@ body {
 
 .signinButton {
 
-    width: 39%;
+    width: 41%;
     height: 15%;
 
     top: 70%;
-    left: 48%;
+    left: 50%;
 
     position: absolute;
 
@@ -289,7 +306,7 @@ body {
 
 .signupTitle {
 
-    left: 16%;
+    left: 15%;
     top: 22%;
 
     position: absolute;
@@ -303,14 +320,452 @@ body {
 
 }
 
-.usernameInput {
+.signupDescription {
+
+    width: 80%;
+
+    left: 9.7%;
+    top: 28%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 500;
+
+    opacity: 50%;
+
+    text-align: center;
+
+}
+
+.signupUsernameTitle {
+
+    top: 45%;
+    left: 10.2%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
+
+    opacity: 50%;    
+
+}
+
+
+.signupUsernameInput {
+
+    width: 80%;
+
+    top: 49%;
+    left: 10%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 17px;
+    font-weight: 700;
 
     background: none;
+
+}
+
+.signupUsernameBorder {
+
+    width: 80%;
+
+    top: 53%;
+    left: 10%;
+
+    position: absolute;
+
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+
+    border-color: #222831;
+
+    opacity: 30%;
+
+}
+
+.signupPasswordTitle {
+
+    top: 58%;
+    left: 10.2%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
+
+    opacity: 50%;    
+
+}
+
+
+.signupPasswordInput {
+
+    width: 80%;
+
+    top: 62%;
+    left: 10%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 17px;
+    font-weight: 700;
+
+    background: none;
+
+}
+
+.signupPasswordBorder {
+
+    width: 80%;
+
+    top: 66%;
+    left: 10%;
+
+    position: absolute;
+
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+
+    border-color: #222831;
+
+    opacity: 30%;
+
+}
+
+.signupPasswordRecovery {
+
+    width: 60%;
+
+    top: 67%;
+    left: 57%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+
+    text-decoration: underline;
+
+}
+
+.signupButtonInput {
+
+    width: 60%;
+    height: 8%;
+
+    top: 80%;
+    left: 20%;
+    position: absolute;
+
+    background-color: #222831;
+    border-radius: 30px;
+
+}
+
+.signupButtonInputTitle {
+
+    top: 27%;
+    left: 27%;
+    position: absolute;
+
+    color: #EEEEEE;
+
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.signupBackTitle {
+
+   top: 92%;
+   left: 20%;
+   position: absolute;
+
+   color: #222831;
+
+   font-family: Inter;
+   font-size: 16px;
+   font-weight: 700;
+
+   opacity: 50%;
+
+}
+
+.signupBackTitleAlert {
+
+    top: 92%;
+    left: 66%;
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
 
 }
 
 .signin {
 
     display: none;
+
+}
+
+.signinIllustrate {
+
+    width: 40%;
+    height: 20%;
+
+    top: 5%;
+    left: 30%;
+
+    position: absolute;
+
+}
+
+.signinTitle {
+
+    left: 10%;
+    top: 22%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 26px;
+    font-weight: 700;
+
+
+}
+
+.signinDescription {
+
+    width: 80%;
+
+    left: 9.7%;
+    top: 28%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 500;
+
+    opacity: 50%;
+
+    text-align: center;
+
+}
+
+.signinUsernameTitle {
+
+    top: 45%;
+    left: 10.2%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
+
+    opacity: 50%;    
+
+}
+
+
+.signinUsernameInput {
+
+    width: 80%;
+
+    top: 49%;
+    left: 10%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 17px;
+    font-weight: 700;
+
+    background: none;
+
+}
+
+.signinUsernameBorder {
+
+    width: 80%;
+
+    top: 53%;
+    left: 10%;
+
+    position: absolute;
+
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+
+    border-color: #222831;
+
+    opacity: 30%;
+
+}
+
+.signinPasswordTitle {
+
+    top: 58%;
+    left: 10.2%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
+
+    opacity: 50%;    
+
+}
+
+
+.signinPasswordInput {
+
+    width: 80%;
+
+    top: 62%;
+    left: 10%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 17px;
+    font-weight: 700;
+
+    background: none;
+
+}
+
+.signinPasswordBorder {
+
+    width: 80%;
+
+    top: 66%;
+    left: 10%;
+
+    position: absolute;
+
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+
+    border-color: #222831;
+
+    opacity: 30%;
+
+}
+
+.signinPasswordRecovery {
+
+    width: 60%;
+
+    top: 67%;
+    left: 57%;
+
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+
+    text-decoration: underline;
+
+}
+
+.signinButtonInput {
+
+    width: 60%;
+    height: 8%;
+
+    top: 80%;
+    left: 20%;
+    position: absolute;
+
+    background-color: #222831;
+    border-radius: 30px;
+
+}
+
+.signinButtonInputTitle {
+
+    top: 28%;
+    left: 20%;
+    position: absolute;
+
+    color: #EEEEEE;
+
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.signinBackTitle {
+
+   top: 92%;
+   left: 14%;
+   position: absolute;
+
+   color: #222831;
+
+   font-family: Inter;
+   font-size: 16px;
+   font-weight: 700;
+
+   opacity: 50%;
+
+}
+
+.signinBackTitleAlert {
+
+    top: 92%;
+    left: 63.5%;
+    position: absolute;
+
+    color: #222831;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
 
 }
